# Terse

./: .env.example  .gitignore  .railwayignore  TODO.md  backtest_report_2025.html  backtest_report_2025.md  generate_report_pdf.py  nixpacks.toml  package-lock.json  package.json  railway.json
android-app/: settings.gradle.kts
api/: airwallex.js  cloud.js  crypto-utils.js  db.js  marketplace.js  notify.js  optimizer-lite.js  paddle.js  proxy.js  seed-listings.js  server.js  setup-stripe-pets.js  terse-api.js
chrome-extension/: STORE_LISTING.md  manifest.json  privacy-policy.html
docs/: TOKEN_OPTIMIZATION_TECHNIQUES.md  terse-pals-design.html  terse-pals-keke.html  terse-pet-posters-cn-v2.html  terse-pet-posters-cn-v3.html  terse-pet-posters-cn-v4.html  terse-pet-posters-cn-v5.html  terse-pet-posters-cn.html  terse-pet-posters-en.html
ios-app/: AppStoreMetadata.md
landing/: ai-token-pricing-comparison.html  api-docs.html  article-steal-50m-zh.md  article-steal-50m.md  auth-callback.html  burn-captions.js  business-plan.html  capture-gif.js  capture-segments.js  capture-with-captions.js  create-live-photos.js  dashboard.html  demo.html  docs.html  for-chatgpt.html  for-claude-code.html  for-cursor.html  get-started.html  i-built-an-app-to-steal-50m-back.html  i18n.js  index.html  llmlingua.html  llms-full.txt  llms.txt  marketplace.html  nlp-analysis.html  norvig-spelling.html  pals.js  pattern-optimization.html  pet-success.html  privacy.html  promo-video-v1-saved.html  promo-video-v2-en.html  promo-video-v2.html  promo-video-v3-zh.html  promo-video-v4-zh.html  promo.html  promo2.html  reduce-ai-api-costs.html  refund-policy.html  (+9 more)
scripts/: setup-stripe-api.js
src/: agent-monitor.js  capture.js  main.js  optimizer-cli.js  optimizer-entry.js  optimizer.js  preload.js  spellfix.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_monitor.rs  capture.rs  lib.rs  license.rs  main.rs  pet_store.rs
vscode-extension/: extension.js  package.json
windows-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
windows-app/src-tauri/capabilities/: default.json
windows-app/src-tauri/src/: agent_monitor.rs  capture.rs  lib.rs  license.rs  main.rs  stats_store.rs
(+171 files in other folders)
