[package]
name = "terse"
version = "1.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "8"
dirs = "6"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "terse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
